--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "nest-typescript-starter",
-  "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
+  "name": "toshi-blockparty",
+  "version": "0.1.0",
+  "author": "Diego Fernández Barrera <bigomby@gmail.com>",
+  "description": "Tohi bot interface for Blockparty",
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
@@ -15,13 +16,17 @@
     "@nestjs/microservices": "^4.5.8",
     "@nestjs/testing": "^4.5.5",
     "@nestjs/websockets": "^4.5.8",
+    "joi": "^13.1.2",
     "redis": "^2.7.1",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
+    "sofa-js": "github:sofaprotocol/sofa-js#v0.1.2",
     "typescript": "^2.6.2"
   },
   "devDependencies": {
     "@types/node": "^9.3.0",
+    "@types/joi": "^13.0.6",
+    "@types/redis": "^2.8.6",
     "nodemon": "^1.14.1",
     "tslint": "5.3.2",
     "ts-node": "^4.1.0"
