--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "@nestjs/microservices": "^4.5.8",
     "@nestjs/testing": "^4.5.5",
     "@nestjs/websockets": "^4.5.8",
+    "@types/axios": "^0.14.0",
+    "@types/ws": "^4.0.1",
+    "axios": "^0.18.0",
+    "bip39": "^2.5.0",
+    "elliptic": "^6.4.0",
+    "hash.js": "^1.1.3",
     "joi": "^13.1.2",
+    "js-sha3": "^0.7.0",
     "redis": "^2.7.1",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
