--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/ws": "^4.0.1",
     "axios": "^0.18.0",
     "bip39": "^2.5.0",
+    "bn.js": "^4.11.8",
     "elliptic": "^6.4.0",
     "hash.js": "^1.1.3",
     "joi": "^13.1.2",
@@ -28,13 +29,14 @@
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
     "sofa-js": "github:sofaprotocol/sofa-js#v0.1.2",
-    "typescript": "^2.6.2"
+    "web3": "^1.0.0-beta.33"
   },
   "devDependencies": {
     "@types/node": "^9.3.0",
     "@types/joi": "^13.0.6",
     "@types/redis": "^2.8.6",
     "nodemon": "^1.14.1",
+    "typescript": "^2.6.2",
     "tslint": "5.3.2",
     "ts-node": "^4.1.0"
   }
